--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/fortify": "^1.7",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5"
     },
@@ -24,6 +25,7 @@
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
+
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
